# osbuild

./: .bandit  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .gitleaks.toml  .mypy.ini  .packit.yaml  .pylintrc  .ruff.toml  .travis.yml  CODEOWNERS  Cargo.toml  Containerfile  Dockerfile_srcinstall  LICENSE  Makefile  NEWS.md  README.md  RELEASE.md  RELEASING.md  Schutzfile  bump-version.sh  conftest.py  go.mod  osbuild  osbuild-run  osbuild.py  osbuild.spec  platform.live-iso.ipp.yaml  pyproject.toml  requirements.lint.txt  requirements.txt  run-stage  samples  setup.cfg  setup.py  tox.ini  tree-diff
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  codecov.yml  mergify.yml
assemblers/: io.weldr.qcow2  io.weldr.tar  io.weldr.targz  io.weldr.tree  org.osbuild.error  org.osbuild.noop  org.osbuild.oci-archive  org.osbuild.ostree.commit  org.osbuild.qcow2  org.osbuild.qemu  org.osbuild.rawfs  org.osbuild.tar  org.osbuild.uefi  org.osbuild.xorrisofs
data/: 10-osbuild-inhibitor.rules
devices/: org.osbuild.btrfs  org.osbuild.loopback  org.osbuild.loopback.meta.json  org.osbuild.luks2  org.osbuild.luks2.meta.json  org.osbuild.lvm2.lv  org.osbuild.lvm2.lv.meta.json
docs/: manifest.md  osbuild-api.1.rst  osbuild-manifest.5.rst  osbuild.1.rst
initrd/: go.mod  initrd.go
inputs/: org.osbuild.containers  org.osbuild.containers-storage  org.osbuild.containers-storage.meta.json  org.osbuild.containers.meta.json  (+10 more)
modules/src/sources/org-osbuild-http/: Cargo.toml
modules/src/sources/org-osbuild-http/src/: main.rs
(+2633 files in other folders)
