[metadata]
name = osbuild
description = A build system for OS images
long_description = file: README.rst
long_description_content_type = text/markdown
keywords = pipeline, build, os, images
license = Apache-2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Operating System :: POSIX :: Linux
    Topic :: System :: Operating System

[options]
zip_safe = False
include_package_data = True
packages = osbuild
setup_requires =
  setuptools_scm

[options.entry_points]
console_scripts =
  osbuild = osbuild.__main__:main

[bdist_wheel]
universal = 1
